--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,11 +1,14 @@
 {% extends 'blog/base.html' %}{% block content %} {% for post in posts %}
+  
 <article class="media content-section">
   <div class="media-body">
     <div class="article-metadata">
       <a class="mr-2" href="#">{{ post.author }}</a>
+      <small class="text-muted">{{ post.date }}</small>
     </div>
     <h2><a class="article-title" href="#">{{ post.book }}</a></h2>
-    <p class="article-content">{{ post.rating }}</p>
+    <p class="article-content">{{ post.description }}</p>
   </div>
+</article>
 </article>
 {% endfor %}{% endblock content %}
