--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,7 +4,7 @@
   <div class="media-body">
     <div class="article-metadata">
       <a class="mr-2" href="#">{{ post.author }}</a>
-      <small class="text-muted">{{ post.date }}</small>
+      <small class="text-muted">{{ post.date|date:"F d, Y" }}</small>
     </div>
     <h2><a class="article-title" href="#">{{ post.book }}</a></h2>
     <p class="article-content">{{ post.description }}</p>
